# speeding-up-quantum-measurement

./: README.md  pyproject.toml
jupyter/: cnot_noise_distribution.ipynb  plots_experimental_noisy_fidelity.ipynb  plots_experimental_noisy_snr.ipynb  plots_experimental_perfect_fidelity.ipynb  plots_experimental_perfect_snr.ipynb
src/: analytic_snr.py  core.py  sim_funcs.py  utils.py
