[tool.poetry]
name = "decaying_poisson_process"
version = "0.1.0"
description = ""
authors = ["Chris Corlett <xl22293@bristol.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
tqdm = "^4.66.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
